--- a/DiBK.RuleValidator.Rules.Gml/Translations/gml.linje.1.resx
+++ b/DiBK.RuleValidator.Rules.Gml/Translations/gml.linje.1.resx
@@ -117,13 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Message1" xml:space="preserve">
-    <value>En bue kan kun inneholde tre punkter.</value>
-  </data>
-  <data name="Message2" xml:space="preserve">
-    <value>Sirkelbuen inneholder et dobbeltpunkt ({0}, {1}).</value>
+  <data name="Message" xml:space="preserve">
+    <value>{0}: Linjen har et dobbeltpunkt ({1}, {2}).</value>
   </data>
   <data name="Name" xml:space="preserve">
-    <value>Sirkelbuer kan ikke inneholde dobbeltpunkter</value>
+    <value>Linjer skal ikke ha dobbeltpunkter</value>
   </data>
 </root>
