--- a/DiBK.RuleValidator.Rules.Gml/Translations/gml.kurve.2.resx
+++ b/DiBK.RuleValidator.Rules.Gml/Translations/gml.kurve.2.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Message" xml:space="preserve">
-    <value>{0}: Linjen har et dobbeltpunkt ({1}, {2}).</value>
+    <value>{0}: Kurven har et dobbeltpunkt ({1}, {2}).</value>
   </data>
   <data name="Name" xml:space="preserve">
-    <value>Linjer skal ikke ha dobbeltpunkter</value>
+    <value>Kurver skal ikke ha dobbeltpunkter</value>
   </data>
 </root>
